# basic-pathfinding

./: Cargo.toml  LICENSE  README.md
pkg/: README.md  basic-pathfinding-0.1.0.tgz  basic-pathfinding-0.1.1.tgz  basic_pathfinding.d.ts  basic_pathfinding.js  basic_pathfinding_bg.d.ts  basic_pathfinding_bg.wasm  package.json  pathfinding-0.1.0.tgz  pathfinding.d.ts  pathfinding.js  pathfinding_bg.d.ts  pathfinding_bg.wasm
src/: coord.rs  grid.rs  js.rs  lib.rs  node.rs  pathfinding.rs  rustler_nifs.rs  search.rs
tests/: find_path.rs  find_walkable.rs  to_coord_map.rs
www/: .babelrc  index.html  index.js  index.jsx  package-lock.json  package.json  webpack.config.js
