[package]
name = "basic-pathfinding"
description = "Tile-based A* pathfinding in Rust"
version = "0.2.6"
authors = ["CygnusRoboticus <joshuadaleharris@gmail.com>"]
edition = "2018"
repository = "https://github.com/CygnusRoboticus/basic-pathfinding"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

# Serialization
serde = "^1.0.59"
serde_derive = "^1.0.59"
serde_json = "1.0"

# Logging
log = "0.4.6"
env_logger = "0.6.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
